Fix issue with charts being overlapped

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -81,7 +81,7 @@ html, body, #root, #app-container {
   width: 100%;
   max-width: 600px;
   margin: 0 auto;
-  max-height: 400px;
+  max-height: 600px;
   overflow: hidden;
 }
 
